erDiagram
    %% ============================================
    %% CSR Volunteer Matching System - ERD
    %% Updated: November 2025 (After Code Cleanup)
    %% Status: Verified against Prisma schema
    %% ============================================

    UserProfile ||--o{ UserAccount : "has role"
    UserAccount ||--o{ Notification : "receives"
    UserAccount ||--o{ Request : "creates (PIN role)"
    UserAccount ||--o{ Shortlist : "saves (CSR role)"
    UserAccount ||--o{ VolunteerOffer : "makes (CSR role)"
    UserAccount ||--o{ Match : "provides help (CSR role)"
    UserAccount ||--o{ Match : "receives help (PIN role)"
    RequestCategory ||--o{ Request : "categorizes"
    Request ||--o{ Shortlist : "saved by"
    Request ||--o{ VolunteerOffer : "receives"
    Request ||--o| Match : "matched with"

    UserProfile {
        uuid id PK "Primary Key"
        varchar name UK "Unique role name (4 records only)"
        text description "Role description"
        json permissions "Future RBAC"
        boolean isActive "Is role active"
        timestamp createdAt
        timestamp updatedAt
    }

    UserAccount {
        uuid id PK "Primary Key"
        varchar email UK "Unique email"
        varchar password "Bcrypt hashed"
        varchar name "Full name"
        varchar phoneNumber
        text address
        date dateOfBirth
        enum status "ACTIVE, SUSPENDED, DELETED"
        uuid userProfileId FK "References UserProfile"
        int age "PIN field - nullable"
        varchar location "PIN field - nullable"
        text accessibilityNeeds "PIN field - nullable"
        varchar profilePhoto "PIN field - nullable"
        varchar companyName "CSR field - nullable"
        varchar companyRegistrationNumber UK "CSR field - nullable"
        varchar industry "CSR field - nullable"
        varchar contactPerson "CSR field - nullable"
        text companyAddress "CSR field - nullable"
        varchar companyLogo "CSR field - nullable"
        varchar department "Platform Manager field - nullable"
        enum profileStatus "ACTIVE, SUSPENDED, DEACTIVATED"
        timestamp createdAt
        timestamp updatedAt
    }


    RequestCategory {
        uuid id PK "Primary Key"
        varchar name UK "Unique category name"
        text description
        varchar iconUrl
        boolean isActive
        timestamp createdAt
        timestamp updatedAt
    }

    Request {
        uuid id PK "Primary Key"
        uuid pinId FK "References UserAccount (PIN role, Cascade Delete)"
        uuid categoryId FK "References RequestCategory"
        varchar title
        text description
        enum urgency "LOW, MEDIUM, HIGH"
        timestamp dateNeeded
        varchar location
        enum status "ACTIVE, MATCHED, COMPLETED, CANCELLED"
        int viewCount "Default 0"
        int shortlistCount "Default 0"
        timestamp createdAt
        timestamp updatedAt
    }

    Shortlist {
        uuid id PK "Primary Key"
        uuid csrRepId FK "References UserAccount (CSR role)"
        uuid requestId FK "References Request"
        timestamp createdAt
    }

    VolunteerOffer {
        uuid id PK "Primary Key"
        uuid csrRepId FK "References UserAccount (CSR role)"
        uuid requestId FK "References Request"
        text message
        enum status "PENDING, ACCEPTED, DECLINED"
        timestamp createdAt
        timestamp updatedAt
    }

    Match {
        uuid id PK "Primary Key"
        uuid requestId FK_UK "References Request (Unique)"
        uuid csrRepId FK "References UserAccount (CSR role)"
        uuid pinId FK "References UserAccount (PIN role)"
        enum status "ACTIVE, COMPLETED, CANCELLED"
        timestamp matchedAt
        timestamp completedAt
        text cancellationReason
        timestamp updatedAt
    }

    Notification {
        uuid id PK "Primary Key"
        uuid userId FK "References UserAccount (Cascade Delete)"
        enum type "VOLUNTEER_OFFER, OFFER_ACCEPTED, etc."
        text message
        boolean isRead "Default false"
        timestamp createdAt
    }
